// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`greaterOrEqual (float) > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "greaterOrEqual",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "greaterOrEqual",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input1",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input2",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input1",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input2",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
    {
      "arguments": [],
      "instruction": "greaterOrEqual",
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 10,
      "lineNumberBeforeMacroExpansion": 10,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 12,
      "lineNumberBeforeMacroExpansion": 12,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input1",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input2",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "greaterOrEqual",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`greaterOrEqual (float) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 8
    i32.const 0
    f32.load
    i32.const 4
    f32.load
    f32.ge
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`greaterOrEqual (float) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input1": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "input1",
    "isInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "input2": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "input2",
    "isInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
}
`;

exports[`greaterOrEqual (int) > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "greaterOrEqual",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "greaterOrEqual",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input1",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input2",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input1",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input2",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
    {
      "arguments": [],
      "instruction": "greaterOrEqual",
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 10,
      "lineNumberBeforeMacroExpansion": 10,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 12,
      "lineNumberBeforeMacroExpansion": 12,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input1",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input2",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "greaterOrEqual",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`greaterOrEqual (int) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 8
    i32.const 0
    i32.load
    i32.const 4
    i32.load
    i32.ge_s
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`greaterOrEqual (int) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input1": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "input1",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "input2": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "input2",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
}
`;
